--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,25 +1,34 @@
+* {
+  box-sizing: border-box;
+}
+
 body.background {
-  font-family: Arial, sans-serif;
-  background-color: #f7fafc;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  padding: 1rem;
+  justify-content: center;
+  background-color: #f7fafc;
+  margin: 0;
 }
 
 .container {
-  padding: 20px;
   border-radius: 8px;
   width: 100%;
   max-width: 896px;
+  padding: 1rem;
 }
 
 .title {
   font-size: 2.25rem;
   font-weight: 700;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 40px;
+}
+
+.subtitle {
+  margin: 0;
+  margin-bottom: 16px;
 }
 
 .content {
@@ -49,6 +58,7 @@ body.background {
   grid-template-columns: repeat(1, 1fr);
   gap: 1.5rem;
   padding: 0;
+  margin: 0;
 }
 
 @media (min-width: 768px) {
